...
          icon: Icons.safety_check,
          builder: guardDuty,
        ),
      ],
      actions: [
        InkWell(
          key: const Key('userProfileIcon'),
          onTap: () =>
              Navigator.of(context).pushNamed(AppRoutes.commanderProfile),
          child: Padding(
            padding: EdgeInsets.all(AppSpacing.md.sp),
            child: Image.asset(
              'lib/assets/icons8-user-96.png',
...
