...
    required RegisterCommander register,
    required SendPasswordReset sendReset,
  })  : _signIn = signIn,
        _register = register,
        _sendReset = sendReset;

  static const signInFailed = 'Wrong Email/Password or Both';
  static const registerFailed = 'This Email in use/ Enter Email and Password';

  final SignInWithEmail _signIn;
  final RegisterCommander _register;
  final SendPasswordReset _sendReset;

...
