...
          } else if (status['statusType'] == 'Leave') {
            non_participants.add(status['Name']);
            soldierReason.addAll({status['Name']: status['statusName']});
          }
        }
        break;
      case 'Route March':
        for (var status in statusList) {
          if (status['statusType'] == 'Excuse') {
            if (RouteMarch.contains(status['statusName'])) {
              non_participants.add(status['Name']);
              soldierReason.addAll({status['Name']: status['statusName']});
            }
...
    );
  }

  Future addConductDetails() async {
    await FirebaseFirestore.instance.collection('Conducts').add({
      //User map formatting
      'conductName': widget.conductName.text.trim(),
      'conductType': widget.selectedConductType,
      'startDate': widget.startDate,
      'startTime': widget.startTime,
      'endTime': widget.endTime,
      'participants': tempArray,
      'soldierReason': soldierReason,
    });
  }

  addConduct() {
...
                  ),
                ),
                SizedBox(
                  height: 30.h,
                ),
                InkWell(
                  key: const Key("conductDate"),
                  onTap: () {
                    _showStartDatePicker();
                  },
                  child: Container(
                    height: 70.h,
                    width: double.maxFinite,
...
                  },
                ),
                SizedBox(
                  height: 30.h,
                ),
                GestureDetector(
                  key: const Key("addConductButton"),
                  onTap: () {
                    if (formKey.currentState!.validate() &&
                        formKey1.currentState!.validate() &&
                        widget.endTime != "End Time:" &&
                        widget.startTime != "Start Time:" &&
                        widget.startTime != "Date:") {
...
                      addConduct();
                    } else {
                      IconSnackBar.show(
                          direction: DismissDirection.horizontal,
                          context: context,
                          snackBarType: SnackBarType.alert,
                          label: 'Details missing',
                          snackBarStyle: const SnackBarStyle() // this one
                          );
                    }
                  },
                  child: Container(
                    padding: EdgeInsets.all(10.sp),
...
