...
                                    fontWeight: FontWeight.w500,
                                    fontSize: 28.sp),
                              ),
                            ],
                          ),
                          GestureDetector(
                            key: const Key("addConductPageRedirectButton"),
                            onTap: () {
                              Navigator.push(
                                context,
                                MaterialPageRoute(
                                  builder: (context) => AddNewConductScreen(
                                    selectedConductType: "Select conduct...",
...
