...

    await FirebaseFirestore.instance.collection('Duties').add({
      //User map formatting
      'points': points,
      'dayType': typeOfDay,
      'dutyDate': widget.dutyDate,
      'startTime': widget.dutyStartTime,
      'endTime': widget.dutyEndTime,
      'participants': dutySoldiersAndRanks
    });
    widget.refreshCallback();
  }

  Future addFieldDetails(String name) async {
...
                SizedBox(
                  height: 50.h,
                ),
                Column(
                  children: [
                    InkWell(
                      key: const Key("startDate"),
                      onTap: () {
                        _showStartDatePicker();
                      },
                      child: Container(
                        height: 70.h,
                        width: double.maxFinite,
...
                  ],
                ),
                SizedBox(
                  height: 30.h,
                ),
                GestureDetector(
                  key: const Key("addGuardDutyButton"),
                  onTap: () {
                    // var dummyarray;
                    // for (var i = dutySoldiersAndRanks.length; i < 10; i++) {
                    //   dummyarray.addEntries({'NA$i': 'NA'}.entries);
                    // }

...
                      add_exit();
                    } else {
                      IconSnackBar.show(
                          direction: DismissDirection.horizontal,
                          context: context,
                          snackBarType: SnackBarType.alert,
                          label: 'Details missing',
                          snackBarStyle: const SnackBarStyle() // this one
                          );
                    }
                  },
                  child: Container(
                    padding: EdgeInsets.all(10.sp),
...
