...
                unselectedLabelStyle: style,
                tabs: const [
                  Tab(
                      text: 'POINTS LEADERBOARD',
                      icon: Icon(Icons.leaderboard_rounded)),
                  Tab(
                      text: 'UPCOMING DUTIES',
                      icon: Icon(Icons.more_time_rounded)),
                ],
              ),
              Expanded(
                child: TabBarView(
                  children: [
...
